updating some css

--- a/apyche_stats/media/css/blue/style.css
+++ b/apyche_stats/media/css/blue/style.css
@@ -1,3 +1,19 @@
+body {
+	background-color: #CDEDF9;
+}
+#hd {
+	text-align: center;
+	font-size: 48px;
+	text-transform: uppercase;
+	letter-spacing: 3px;
+}
+#ft {
+	text-align: center;
+}
+#ft a {
+	text-decoration: none;
+	color: #990003;
+}
 /* tables */
 table.tablesorter {
 	font-family:arial;
